Update logstash config

--- a/logstash.conf
+++ b/logstash.conf
@@ -1,10 +1,11 @@
 input {
-  gelf {
-    port => 12201
-    type => gelf
-  }
+  gelf {}
 }
 
 output {
-  elasticsearch {}
+  stdout {}
+
+  elasticsearch {
+    protocol => http
+  }
 }
