Send bermuda logs to logstash

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "monolog/monolog": "^1.17",
-        "symfony/console": "^2.7"
+        "symfony/console": "^2.7",
+        "graylog2/gelf-php": "^1.4"
     },
     "autoload": {
         "psr-4": {
